# pypngw

./: FD2TD.py  Makefile.am  README.md  __init__.py  configure.ac  ctypes_struct.py  pngwtd.py
libbasic/: Makefile.am  basic.h  basic_Alloc.c  basic_Alloc.h  basic_Constants.h  basic_Datatypes.h  basic_Debug.c  basic_Debug.h  basic_Error.c  basic_Error.h  basic_StatusMacros.h  basic_String.c  basic_String.h  main.c  source_CreateArray.c  source_CreateArraySequence.c  source_CreateVector.c  source_CreateVectorSequence.c  source_DestroyArray.c  source_DestroyArraySequence.c  source_DestroyVector.c  source_DestroyVectorSequence.c  source_ResizeArray.c  source_ResizeVector.c  source_TimeSeries.c  utils_Datatypes.h  utils_Factories.c  utils_Factories.h  utils_OptionParser.c  utils_OptionParser.h  utils_StringConvert.c  utils_StringConvert.h  utils_StringVector.c  utils_StringVector.h
libcore/: Makefile.am  pngw.c  pngw.h  pngw_Datatypes.h  pngw_Epart.c  pngw_Epart.h  pngw_LEpart.c  pngw_LEpart.h  pngw_Lpart.c  pngw_Lpart.h  pngw_Upart.c  pngw_Upart.h  pngw_Utils.c  pngw_Utils.h
